GB3-768: Fix search-bar and search results bug. They now align and do not overlap the map tools. uupdate size an dposition of mobile menu icon

--- a/src/app/map/components/search-window/result-groups/result-groups.component.scss
+++ b/src/app/map/components/search-window/result-groups/result-groups.component.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-left: 5px;
   height: 100%;
 
   .result-window__loading-bar {
