--- a/src/app/map/components/search-window/search-window.component.scss
+++ b/src/app/map/components/search-window/search-window.component.scss
@@ -29,7 +29,7 @@
     position: absolute;
     top: 64px;
     bottom: 0;
-    width: map-layout-variables.$search-window-width;
+    width: map-layout-variables.$search-results-width;
     z-index: z-index-variables.$search-window-results;
   }
 
